CloneCredentials - fix form fieldset spacing

--- a/client/signup/steps/clone-credentials/style.scss
+++ b/client/signup/steps/clone-credentials/style.scss
@@ -2,3 +2,9 @@
 	max-width: 720px;
 	margin: 0 auto;
 }
+
+.clone-credentials__form {
+	.form-fieldset {
+		margin-bottom: 24px;
+	}
+}
